--- a/weereplays.css
+++ b/weereplays.css
@@ -28,9 +28,9 @@ img {
 body {
     text-align: center;
     margin: 0px;
-    background-image: url(img/bg3.png);
+    /*background-image: url(img/bg3.png);*/
     background-repeat: repeat;
-    background-color: #CCC;
+    background-color: #111;
     scrollbar-base-color: #FFF;
 }
 
@@ -49,7 +49,7 @@ div.visiblediv {
  * Main wrapper         *
  ************************/
 #wrapper {
-    width: 1180px;
+    width: 960px;
     margin: 0 auto;
     text-align: left;	
 }
@@ -70,9 +70,9 @@ div.visiblediv {
 #header {	
     margin-top: 10px;
     height: 100px;
-    background:url('img/banner2.jpg') #220000;
+    background:url('img/testbg.jpg') #220000;
     margin-bottom: 0px;
-    width: 960px;
+    width: 958px;
 }
 
 #navcontwrapper {
@@ -85,26 +85,28 @@ div.visiblediv {
     float: left;
     margin-top: 10px;
     margin-bottom: 0px;
-    height: 35px;
-    width: 960px;
+    height: 40px;
+    width: 640px;
     border: none;
 }
 
 #content {
     margin-top: 0px;
+    min-height: 400px;
     border-top: none;
     float: left;
-    width: 960px;
-    height: 680px;
-    overflow: auto;
+    width: 958px;
 }
 
 #user {
-    margin-top: 49px;
-    margin-left: 12px;
-    float: left;
-    height: 300px;
-    width: 187px;
+    margin-top: 10px;
+    margin-bottom: 4px;
+    margin-right: 0px;
+    background: none;
+    border: none;
+    float: right;
+    height: 35px;
+    width: 300px;
 }
 
 #footer {
@@ -129,12 +131,9 @@ div.visiblediv {
     list-style: none;
     margin: 0;
     padding: 7px 0;
-    font-weight: bold;
-    font-family: arial;
-    text-align: center;
+    text-align: left;
+    margin-left: 20px;
     white-space: nowrap;
-    font-size: 14px;
-    
 }
 
 #nav ul li{
@@ -147,11 +146,14 @@ div.visiblediv {
     text-decoration: none;
     padding: 0 0 3px;
     color: #EEE;
+    font-weight: bold;
+    font-family: arial;
+    font-size: 18px;
 }
 
 #nav ul a#current{
     border-color: #FFF;
-    border-bottom: 9px solid;
+    border-bottom: 11px solid;
     color: #EEE;
 }
 
@@ -168,7 +170,7 @@ div.visiblediv {
  **************************/
 p {
     margin-left: 10px;
-    color: #000;
+    color: #222;
     font-size: 14px;
 }
 
@@ -178,6 +180,25 @@ p.loginerror {
 }
 
 p.nextpagelinks {
+    text-align: right;
+}
+
+
+#logintext {
+    font-size: 11px;
+    font-family: arial;
+    margin-top: 5px;
+    margin-right: 3px;
+    color: #FFF;
+    text-align: right;
+}
+
+#userinfo {
+    margin-top: 11px;
+    margin-right: 3px;
+    font-size: 12px;
+    color: #FFF;
+    font-family: arial;
     text-align: right;
 }
 
@@ -202,15 +223,15 @@ td.forminput {
 }
 
 td.replaystd {
-    border-top: 2px solid #000;
-    border-left: 2px solid #000;
+    border-top: 1px solid #222;
+    border-left: 1px solid #222;
     border-radius: 5px;
 }
 
 table.replaytable {
     margin-top: 20px;
     margin-left: 20px;
-    border: 4px solid #000;
+    border: 2px solid #222;
     border-radius: 5px;
 }
 
@@ -220,7 +241,12 @@ table.replaytable {
  * OTHER SETTINGS         *
  **************************/
 input.textinput {
-    width: 90px;
+    width: 70px;
+}
+
+#loginbutton {
+    width: 50px;
+    margin-left: 10px;
 }
 
 textarea {
