--- a/weereplays.css
+++ b/weereplays.css
@@ -30,7 +30,7 @@ body {
     margin: 0px;
     /*background-image: url(img/bg3.png);*/
     background-repeat: repeat;
-    background-color: #000;
+    background-color: #222;
     scrollbar-base-color: #FFF;
 }
 
@@ -147,7 +147,6 @@ div.visiblediv {
     padding: 0 0 3px;
     color: #EEE;
     font-weight: bold;
-    font-family: arial;
     font-size: 18px;
 }
 
@@ -169,7 +168,7 @@ div.visiblediv {
  * PARAGRAPH SETTINGS     *
  **************************/
 p {
-    margin-left: 10px;
+    margin-left: 0px;
     color: #222;
     font-size: 14px;
 }
@@ -183,14 +182,21 @@ p.loginerror {
     font-style: italic;
 }
 
-p.nextpagelinks {
+p.lastpagelinks {
     text-align: right;
+}
+
+p.curpage {
+    text-align: center;
+}
+
+p.nextpagelinks {
+    text-align: left;
 }
 
 
 #logintext {
     font-size: 11px;
-    font-family: arial;
     margin-top: 5px;
     margin-right: 3px;
     color: #FFF;
@@ -229,7 +235,10 @@ td.forminput {
 td.replaystd {
     border-top: 1px solid #222;
     border-left: 1px solid #222;
-    border-radius: 5px;
+}
+
+tr.replayrow:hover {
+    background-color: #DDD;
 }
 
 table.replaytable {
