--- a/weereplays.css
+++ b/weereplays.css
@@ -109,6 +109,13 @@ div.visiblediv {
     width: 300px;
 }
 
+#changepassword {
+    border: 1px solid #000;
+    width: 400px;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
 #footer {
     float: left;
     margin-top: 10px;
@@ -256,12 +263,17 @@ tr.replayrow:hover {
     background-color: #DDD;
 }
 
+table.registertable {
+    margin-top: 20px;
+    margin-left: 20px;    
+    border: 1px solid #000;
+}
+
 table.replaytable {
     margin-top: 20px;
     margin-left: 20px;
     
-    border: 2px solid #222;
-    border-radius: 5px;
+    border: 1px solid #000;
 }
 
 table.replaydatatable td {
@@ -287,11 +299,16 @@ table.replaydatatable {
     margin-top: 20px;
     margin-left: 20px;
     margin-right: 20px;
-    border: 2px solid #222;
-    border-radius: 5px;
+    margin-bottom: 20px;
+    
+    border: 1px solid #222;
 }
 
-
+table.changepasstable {
+    margin-top: 20px;
+    margin-left: 20px;
+    border: 1px solid #222;
+}
 
 /**************************
  * OTHER SETTINGS         *
