--- a/weereplays.css
+++ b/weereplays.css
@@ -238,6 +238,10 @@ p.replayheader, p.commentheader {
     text-align: right;
 }
 
+table p {
+    margin: 0px;
+}
+
 #logintext {
     font-size: 11px;
     margin-top: 5px;
